--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ seaborn = "^0.11.2"
 matplotlib = "^3.5.1"
 mkdocs = "^1.3.0"
 invoke = "^1.7.0"
+pandas-profiling = {extras = ["notebook"], version = "^3.2.0"}
+xlrd = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
