--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mkdocs = "^1.3.0"
 invoke = "^1.7.0"
 pandas-profiling = {extras = ["notebook"], version = "^3.2.0"}
 xlrd = "^2.0.1"
+xgboost = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
