--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ xlrd = "^2.0.1"
 xgboost = "^1.6.1"
 dpcpp-cpp-rt = "^2022.1.0"
 streamlit = "^1.10.0"
+plotly = "^5.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
