--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,8 @@ gitpython==3.1.27; python_version >= "3.7"
 htmlmin==0.1.12; python_version >= "3.6"
 idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.7"
 imagehash==4.2.1; python_version >= "3.6"
+imbalanced-learn==0.9.0
+imblearn==0.0
 importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
 importlib-resources==5.7.1; python_version < "3.9" and python_version >= "3.7"
 intel-cmplr-lic-rt==2022.1.0
@@ -120,6 +122,7 @@ smmap==5.0.0; python_version >= "3.7"
 sniffio==1.2.0; python_full_version >= "3.6.2" and python_version >= "3.7"
 soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
 stack-data==0.2.0; python_version >= "3.8"
+streamlit-option-menu==0.3.2; python_version >= "3.6"
 streamlit==1.10.0; python_version >= "3.6"
 tangled-up-in-unicode==0.2.0; python_version >= "3.6"
 tenacity==8.0.1; python_version >= "3.6"
